Fix events duplicates
